Minor fix to better align the top shortcut sub menu popup.

--- a/src/main/webapp/css/menubar.css
+++ b/src/main/webapp/css/menubar.css
@@ -41,4 +41,6 @@
 
 .gwt-MenuBarPopup {
     z-index: 1000;
+    margin-top: 1px;
+    margin-left: -1px;
 }
